eclipseWorkspace/AK SFDC/src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>AccRelationshipInt__c</fullName>
        <formula>CASE( 
Account_Relationship__c, 
&quot;Lead&quot;, 1, 
&quot;Responded&quot;, 2, 
&quot;Qualified Lead&quot;, 3, 
&quot;Active Prospect&quot;, 3,
&quot;Active Account&quot;, 4,
&quot;Idle Account&quot;, 4,
&quot;Extinct&quot;, 5,
0)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>AccRelationshipInt</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Account_Name_Aliases__c</fullName>
        <inlineHelpText>Use to enter any other names this account may also be known by - e.g. for SGI, it is also Silicon Graphics Inc.</inlineHelpText>
        <label>Aliases, Former and Acquired Names</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Account_Relationship__c</fullName>
        <label>Account Relationship</label>
        <picklist>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Responded</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Qualified Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Prospect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Active Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idle Account</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Extinct</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Acquired_Account_Status__c</fullName>
        <label>Acquired Account Status</label>
        <picklist>
            <picklistValues>
                <fullName>Subsidiary of Acquiring Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Division of Acquiring Company</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dissolved</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Attributed_To__c</fullName>
        <label>Attributed To</label>
        <picklist>
            <picklistValues>
                <fullName>Chris</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Steve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Elisa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alicia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Henrik</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sebastian</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Competitors__c</fullName>
        <label>Competitors / Search Targets</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Crunchbase_Profile__c</fullName>
        <label>Crunchbase Profile</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Fee_Highlights__c</fullName>
        <label>Fee Highlights</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Friendly_Name__c</fullName>
        <label>Friendly Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Funding_Regions__c</fullName>
        <label>Funding Regions</label>
        <picklist>
            <picklistValues>
                <fullName>Home Country Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ANZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>APAC</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Funding_Size__c</fullName>
        <label>Funding Size ($ USD)</label>
        <picklist>
            <picklistValues>
                <fullName>&lt; 250k</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>250k - 1M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1M - 10M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10M - 50M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>50M - 100M</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>&gt; 100M</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Funding_Type__c</fullName>
        <label>Funding Type</label>
        <picklist>
            <picklistValues>
                <fullName>Accelerator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incubator</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Co-Working Space</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Early-Stage Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Late-Stage Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Equity</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>IN_Company_Page__c</fullName>
        <formula>IF(IN_Linkedin_ID__c  &lt;&gt; &quot;&quot;,&quot;https://www.linkedin.com/company/&quot;&amp;IN_Linkedin_ID__c,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>IN: Company Page</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_Employees__c</fullName>
        <label>IN: Employees</label>
        <picklist>
            <picklistValues>
                <fullName>Myself Only</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2-10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11-50</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>51-200</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>201-500</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>501-1000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1001-5000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5001-10000</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10001+</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>IN_Founded__c</fullName>
        <label>IN: Founded</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_Linkedin_ID__c</fullName>
        <label>IN: Linkedin ID</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_Name__c</fullName>
        <label>IN: Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IN_Operating_Status__c</fullName>
        <label>IN: Operating Status</label>
        <picklist>
            <picklistValues>
                <fullName>Operating</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Operating Subsidiary</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Acquired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Reorganizing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Out of Business</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Nearest_Major_City__c</fullName>
        <label>Nearest Major City</label>
        <picklist>
            <picklistValues>
                <fullName>San Francisco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>London</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sydney</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Boston</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Los Angeles</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>New York</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>San Diego</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Seattle</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Number_of_Opportunities__c</fullName>
        <label>Number of Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Relationship__c</fullName>
        <formula>IF( AND(RecordTypeId = &quot;012b0000000Tyc8&quot;, NOT(Parent.RecordTypeId = &quot;012b0000000ULof&quot;) ),

    IF(ParentId = &quot;&quot;,

    &quot;Top Level&quot;,

        IF(Parent.ParentId = &quot;&quot;,
        TEXT(Parent.Account_Relationship__c),
        TEXT(Parent.Parent.Account_Relationship__c)
        )
    )

,TEXT(Parent.Account_Relationship__c)
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Relationship</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Type__c</fullName>
        <formula>Parent.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Employees__c</fullName>
        <formula>IF( AND(RecordTypeId = &quot;012b0000000Tyc8&quot;, NOT(Parent.RecordTypeId = &quot;012b0000000ULof&quot;) ),

    IF(ParentId = &quot;&quot;,

    &quot;Top Level&quot;,

        IF(Parent.ParentId = &quot;&quot;,
        TEXT( Parent.IN_Employees__c ),
        TEXT( Parent.Parent.IN_Employees__c )
        )
    )

,TEXT( Parent.IN_Employees__c )
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Employees</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Founded__c</fullName>
        <formula>IF( AND(RecordTypeId = &quot;012b0000000Tyc8&quot;, NOT(Parent.RecordTypeId = &quot;012b0000000ULof&quot;) ),

    IF(ParentId = &quot;&quot;,

    &quot;Top Level&quot;,

        IF(Parent.ParentId = &quot;&quot;,
        Parent.IN_Founded__c,
        Parent.Parent.IN_Founded__c
        )
    )

,Parent.IN_Founded__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Founded</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Website__c</fullName>
        <formula>IF( AND(RecordTypeId = &quot;012b0000000Tyc8&quot;, NOT(Parent.RecordTypeId = &quot;012b0000000ULof&quot;) ),

    IF(ParentId = &quot;&quot;,

    &quot;Top Level&quot;,

        IF(Parent.ParentId = &quot;&quot;,
        Parent.Website,
        Parent.Parent.Website
        )
    )

,Parent.Website
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Website</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Placements_at_this_Account__c</fullName>
        <label>Placements at this Account</label>
        <picklist>
            <controllingField>Account_Relationship__c</controllingField>
            <picklistValues>
                <fullName>Loads!</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Just the One</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nada</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFSSDupeCatcher__Override_DupeCatcher__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Account Override DupeCatcher</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Why_Idle__c</fullName>
        <label>Why Idle?</label>
        <picklist>
            <controllingField>Account_Relationship__c</controllingField>
            <picklistValues>
                <fullName>Acquired</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chose Other Firms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Immediate Plans to Hire</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Using External Firms</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pain in the Ass</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Prime Contact Moved</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wouldn&apos;t Pay Retained / Exclusive</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>bh_clientCorporationID__c</fullName>
        <description>Used to reference the original Record ID in Bullhorn</description>
        <externalId>true</externalId>
        <label>bh_clientCorporationID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>bh_customerSectors__c</fullName>
        <label>Customer Sectors</label>
        <picklist>
            <picklistValues>
                <fullName>Hardware Manufacturer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Software Editor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Service Provider</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carrier / Operator / Telco</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Broadcast / Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile / Wireless</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Systems Integrator / Reseller</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consultancy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Datacentre</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enterprise</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SME / SMB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Public Sector</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Consumer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Finance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Healthcare / Medical / Pharmaceuticals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Industrial / Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Leisure / Travel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oil / Gas / Energy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retail</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transport</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <listViews>
        <fullName>Active_Prospects</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>Account_Relationship__c</columns>
        <columns>ACCOUNT.RATING</columns>
        <columns>Placements_at_this_Account__c</columns>
        <columns>Why_Idle__c</columns>
        <columns>Parent_Account_Relationship__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Relationship__c</field>
            <operation>equals</operation>
            <value>Active Prospect</value>
        </filters>
        <label>Active Prospects</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STREET</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.ADDRESS2_STREET</columns>
        <columns>ACCOUNT.ADDRESS2_CITY</columns>
        <columns>ACCOUNT.ADDRESS2_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS2_ZIP</columns>
        <columns>ACCOUNT.ADDRESS2_COUNTRY_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Company_HQ,Account.Supplier,Account.Company_Branch_Office</value>
        </filters>
        <filters>
            <field>ACCOUNT.ADDRESS1_COUNTRY_CODE</field>
            <operation>equals</operation>
            <value>GB</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllInvestors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Investor</value>
        </filters>
        <label>All Investment / VC firms</label>
    </listViews>
    <listViews>
        <fullName>All_Companies</fullName>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>Account_Relationship__c</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>Nearest_Major_City__c</columns>
        <columns>bh_customerSectors__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Company_HQ</value>
        </filters>
        <label>All Companies</label>
    </listViews>
    <listViews>
        <fullName>All_Employers</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>Account.Employer_or_Acquirer</value>
        </filters>
        <label>All Employers</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <listViews>
        <fullName>NewToday</fullName>
        <columns>ACCOUNT.RECORDTYPE</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY_CODE</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACCOUNT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>New Today</label>
    </listViews>
    <recordTypes>
        <fullName>Acquired_Company</fullName>
        <active>true</active>
        <description>For acquired companies</description>
        <label>Acquired Company</label>
    </recordTypes>
    <recordTypes>
        <fullName>Company_Branch_Office</fullName>
        <active>true</active>
        <description>Same company different location. All details except address are inherited from it&apos;s parent.</description>
        <label>Company Branch Office</label>
    </recordTypes>
    <recordTypes>
        <fullName>Company_HQ</fullName>
        <active>true</active>
        <description>Use for all customers&apos; and potential customers&apos; HQs</description>
        <label>Company Headquarters</label>
    </recordTypes>
    <recordTypes>
        <fullName>Employer_or_Acquirer</fullName>
        <active>true</active>
        <description>Use when attaching candidates to companies not already on SF or adding a simple Acquiring Company Name</description>
        <label>Employer or Acquirer</label>
    </recordTypes>
    <recordTypes>
        <fullName>Investor</fullName>
        <active>true</active>
        <label>Investor</label>
    </recordTypes>
    <recordTypes>
        <fullName>Supplier</fullName>
        <active>true</active>
        <description>Use for suppliers and other general business contacts (non-customer/potentials)</description>
        <label>Supplier</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>City_and_Country_Check</fullName>
        <active>true</active>
        <description>Checks that a City and Country has been added for Company HQs, Acquired Companies, Investors and Suppliers, not Employer or Branch accounts.</description>
        <errorConditionFormula>AND(
 OR(
  RecordType.Id = &quot;012b0000000TpLO&quot;,
  RecordType.Id = &quot;012b0000000TpLs&quot;,
  RecordType.Id = &quot;012b0000000Tyc8&quot;,
  RecordType.Id = &quot;012b0000000UMgq&quot;
 ),
 OR(
  BillingCity = NULL,
  ISPICKVAL(BillingCountryCode,&quot;&quot;)
 )
)</errorConditionFormula>
        <errorMessage>Please enter the City and Country.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Nearest_Major_City_Check</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
 OR(
  RecordType.Id = &quot;012b0000000TpLO&quot;,
  RecordType.Id = &quot;012b0000000TpLs&quot;,
  RecordType.Id = &quot;012b0000000Tyc8&quot;,
  RecordType.Id = &quot;012b0000000UMgq&quot;
 ),
 AND(
  ISPICKVAL(BillingCountryCode,&quot;US&quot;),
  ISPICKVAL(Nearest_Major_City__c, &quot;&quot;)
 )
)</errorConditionFormula>
        <errorMessage>Please enter the nearest major city for US based companies.</errorMessage>
    </validationRules>
</CustomObject>